# audio-publisher

./: .gitignore  CLAUDE.md  README.md  gcp.tf  logger.py  preview_template.py  requirements.txt  terraform.tfvars.example  test.sh  test_msgraph_api.py
.github/workflows/: analysis.yml  release.yml
cloud/: .terraform.lock.hcl  Dockerfile  gcp.tf  generate_file_listing.py  normalize.py  preview_template.py  pyproject.toml  requirements.txt  terraform.tfvars.example
cloud/prompts/: sermon.md
cloud/scripts/: preview_template.py  try_notes.py
cloud/src/: generate_file_listing.py  generate_notes.py  main.py  normalize.py
cloud/src/templates/: index.html.jinja
cloud/templates/: file_listing.html.jinja
cloud/tests/: test_generate_file_listing.py  test_generate_notes.py  test_main.py
raspberry_pi/: .gitignore  Cargo.toml  deploy.sh  flash_drive_reader.py  requirements.txt  watcher.py
raspberry_pi/ansible/: ansible.cfg  deploy.yml  inventory.yml  playbook.yml  vars.yml.example
raspberry_pi/ansible/templates/: audio-publisher.service.j2
raspberry_pi/src/: console_format.rs  led_indicator.rs  main.rs  recording_uploader.rs  usb_drive_watcher.rs
src/: flash_drive_reader.py  logger.py  main.py  normalize.py  publisher.py  storage.py
