[package]
name = "raspberry_pi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
google-cloud-storage = "1.4.0"
nix = { version = "0.30.1", features = ["user", "mount"] }
rppal = "0.19.0"
udev = "0.9.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs"] }
tokio-util = "0.7.17"

[build]
target = "aarch64-unknown-linux-gnu"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]
